Renia_MachineProb.html

--- a/Renia_MachineProb.html
+++ b/Renia_MachineProb.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Days</title>
+    <title>Renia Week Days</title>
     <link rel="stylesheet" href="Renia_MachineProb.css">
 </head>
 <body>
